project text bg black

--- a/css/intro.css
+++ b/css/intro.css
@@ -75,4 +75,7 @@
     .project .overlay{
         background: #1a1817;
     }
+    .text{
+        background : rgba(black, 0.5);
+        }        
 }
